blog system update

--- a/blogposts/post2.html
+++ b/blogposts/post2.html
@@ -44,13 +44,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
          <div id="wrapper">
         <section id="main" class="wrapper">
             <div class="inner">
-                <h1>Coming Soon!</h1>
-                    <span class="image fit"><img src="../assets/images/logo_framework.jpg" alt="Coming Soon" /></span>
-                    <p>Get ready, Sarnia! Roma Mart is opening soon at 189 Wellington Street! 🏪</p>
-                </div>
+                <h1>Community Survey</h1>
+                <span class="image fit"><img src="../assets/images/logo_structure.jpg" alt="Community Survey" /></span>
+                <p>Hey Sarnia! 👋 We're Roma Mart—an upcoming convenience store, opening soon at 189 Wellington St. <br/>
+But we're not just a convenience store—we want to be your go-to spot for your everyday needs. <br/>
+👉 Tell us what you want & we’ll stock it! Fill out this quick survey:</p>
+                <a href="https://forms.gle/butQ53RDeFPJq36L9" target="_blank" class="button primary">Take the Survey</a>
+                <p>Thank you for helping us build a store that truly serves you 🙌💙</p>
+            </div>
         </section>
         </div>
-           <!-- Footer -->
+
+        <!-- Footer -->
         <footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<!-- Add the logo -->
