footer social beta

--- a/blogposts/post2.html
+++ b/blogposts/post2.html
@@ -69,6 +69,15 @@ But we're not just a convenience store—we want to be your go-to spot for your 
 						<li><a href="privacypolicy.html">Privacy Policy</a></li>
    						<li><a href="http://html5up.net"><i class="fa-solid fa-link"></i> Design: HTML5 UP</a></li>
 					</ul>
+                    <li>
+											<h3><i class="fa-solid fa-hashtag"></i> Find us on:</h3>
+											<ul class="icons">
+												<li><a href="#" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
+											   <li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+											</li>
 				</div>
 			</footer>
             <!-- Scripts -->
