--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<p>Have a question or suggestion? Want to collaborate or supply your product at Roma Mart? We'd love to hear from you.</p>
 							<div class="split style1">
 								<section>
-									<form target=""_blank" method="POST" action="https://formsubmit.co/contact@romamart.ca>
+									<form target=""_blank" action="https://formsubmit.co/contact@romamart.ca" method"POST">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
