--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<p>Have a question or suggestion? Want to collaborate or supply your product at Roma Mart? We'd love to hear from you.</p>
 							<div class="split style1">
 								<section>
-									<form target=""_blank" action="https://formsubmit.co/contact@romamart.ca" method"POST">
+									<form action="https://api.web3forms.com/submit" method="POST">
+										<!-- Replace with your Access Key -->
+    <input type="hidden" name="access_key" value="e4a0fd98-2ea3-4d6c-8449-346b6097c7dc"
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -163,6 +165,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<label for="message">Message</label>
 												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
+											<!-- Honeypot Spam Protection -->
+    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+
+    <!-- Custom Confirmation / Success Page -->
+    <!-- <input type="hidden" name="redirect" value="https://mywebsite.com/thanks.html"> -->
 											<ul class="actions">
 											<li><a href="" class="button submit">Send Message</a></li>
 											</ul>
