--- a/blogpage.html
+++ b/blogpage.html
@@ -75,7 +75,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         					</div>
     					</section>
 					</section>
-					<section id="main" class="wrapper">
+					<section id="main" class="wrapper style1 updates-container">
     					<div class="inner">
 							<h2 class="major">Latest Updates</h2>
         						<div id="latest-post">
