--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -63,7 +63,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="main" class="wrapper updates-container">
 						<div class="inner">
 							<h1 class="major">Privacy Policy</h1>
 							<span class="icon fit"><i class="fa-solid fa-shield-halved"></i></span>
