persistent order button

--- a/blogposts/post2.html
+++ b/blogposts/post2.html
@@ -92,5 +92,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<script src="../assets/js/util.js"></script>
 			<script src="../assets/js/main.js"></script>
 			<script src="../assets/js/sidebar.js"></script>
+
+            <!-- Floating Order Button -->
+<div id="floating-order-button">
+    <a href="#" class="fab">
+        <i class="fa-solid fa-shopping-cart"></i>
+        <span>Order Online</span>
+    </a>
+</div>
     </body>
 </html>
