--- a/blogpage.html
+++ b/blogpage.html
@@ -129,5 +129,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/blog.js"></script>
 			<script src="assets/js/sidebar.js"></script>
+
+			<!-- Floating Order Button -->
+<div id="floating-order-button">
+    <a href="#" class="fab">
+        <i class="fa-solid fa-shopping-cart"></i>
+        <span>Order Online</span>
+    </a>
+</div>
 		</body>
 </html>
