--- a/blogposts/post2.html
+++ b/blogposts/post2.html
@@ -81,6 +81,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 												<li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
 											   <li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 											</li>
+                                            <!-- Elfsight Google Reviews | Roma Mart Google Reviews -->
+							<script src="https://static.elfsight.com/platform/platform.js" async></script>
+							<div class="elfsight-app-b0e4bb9b-7f1f-45bc-9045-16f65cd83a57" data-elfsight-app-lazy></div>
 				</div>
 			</footer>
             <!-- Scripts -->
