--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<ul class="actions">
 								<li><a href="#" class="button scrolly">Order Online</a></li> <!-- change # with link for POS ordering system -->
 							</ul>
+							
 						</div>
 					</section>
 
@@ -250,6 +251,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
 											   <li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 											</li>
+											<!-- Elfsight Google Reviews | Roma Mart Google Reviews -->
+							<script src="https://static.elfsight.com/platform/platform.js" async></script>
+							<div class="elfsight-app-b0e4bb9b-7f1f-45bc-9045-16f65cd83a57" data-elfsight-app-lazy></div>
 				</div>
 			</footer>
 
