--- a/blogpage.html
+++ b/blogpage.html
@@ -110,11 +110,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<li>
 											<h3><i class="fa-solid fa-hashtag"></i> Find us on:</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
-											   <li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+													<li><a href="https://www.facebook.com/romamartca" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="https://www.instagram.com/romamart.ca/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 											</li>
 											<!-- Elfsight Google Reviews | Roma Mart Google Reviews -->
 							<script src="https://static.elfsight.com/platform/platform.js" async></script>
