--- a/blogpage.html
+++ b/blogpage.html
@@ -31,6 +31,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4FWPSRF"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+ <!-- TrustBox script -->
+<script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+<!-- End TrustBox script -->
 		<!-- Header depreciated
 			<header id="header">
 				<a href="index.html" class="title">
@@ -113,9 +116,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 													<li><a href="https://www.facebook.com/romamartca" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 												<li><a href="https://www.instagram.com/romamart.ca/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 											</li>
-											<!-- Elfsight Google Reviews | Roma Mart Google Reviews -->
-							<script src="https://static.elfsight.com/platform/platform.js" async></script>
-							<div class="elfsight-app-b0e4bb9b-7f1f-45bc-9045-16f65cd83a57" data-elfsight-app-lazy></div>
+											<!-- TrustBox widget - Review Collector -->
+<div class="trustpilot-widget" data-locale="en-US" data-template-id="56278e9abfbbba0bdcd568bc" data-businessunit-id="682725e77d7d518b035c1d50" data-style-height="52px" data-style-width="100%">
+  <a href="https://www.trustpilot.com/review/romamart.ca" target="_blank" rel="noopener">Trustpilot</a>
+</div>
+<!-- End TrustBox widget -->
 				</div>
 			</footer>
 
