--- a/blogposts/post2.html
+++ b/blogposts/post2.html
@@ -8,6 +8,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-N4FWPSRF');</script>
 <!-- End Google Tag Manager -->
+ <!-- TrustBox script -->
+<script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+<!-- End TrustBox script -->
  <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         <script defer data-cfasync='false' src='https://s.clickiocdn.com/t/243023_wv.js'></script>
@@ -78,9 +81,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 													<li><a href="https://www.facebook.com/romamartca" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 												<li><a href="https://www.instagram.com/romamart.ca/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 											</li>
-                                            <!-- Elfsight Google Reviews | Roma Mart Google Reviews -->
-							<script src="https://static.elfsight.com/platform/platform.js" async></script>
-							<div class="elfsight-app-b0e4bb9b-7f1f-45bc-9045-16f65cd83a57" data-elfsight-app-lazy></div>
+                                           <!-- TrustBox widget - Review Collector -->
+<div class="trustpilot-widget" data-locale="en-US" data-template-id="56278e9abfbbba0bdcd568bc" data-businessunit-id="682725e77d7d518b035c1d50" data-style-height="52px" data-style-width="100%">
+  <a href="https://www.trustpilot.com/review/romamart.ca" target="_blank" rel="noopener">Trustpilot</a>
+</div>
+<!-- End TrustBox widget -->
 				</div>
 			</footer>
             <!-- Scripts -->
