--- a/blogpage.html
+++ b/blogpage.html
@@ -108,6 +108,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<ul class="menu">
 						<li>&copy; 2025 Roma Mart Corp. All rights reserved.</li>
 						<li><a href="privacypolicy.html">Privacy Policy</a></li>
+                        <li>&copy; GST/HST#: 780971768</li>
    						<li><a href="http://html5up.net"><i class="fa-solid fa-link"></i> Design: HTML5 UP</a></li>
 					</ul>
 					<li>
