--- a/blogposts/post2.html
+++ b/blogposts/post2.html
@@ -73,6 +73,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<ul class="menu">
 						<li>&copy; 2025 Roma Mart Corp. All rights reserved.</li>
 						<li><a href="privacypolicy.html">Privacy Policy</a></li>
+                        <li>&copy; GST/HST#: 780971768</li>
    						<li><a href="http://html5up.net"><i class="fa-solid fa-link"></i> Design: HTML5 UP</a></li>
 					</ul>
                     <li>
